/*
Copyright 2018 The Vitess Authors
 Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at
     http://www.apache.org/licenses/LICENSE-2.0
 Unless required by applicable law or agreedto in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
*/

// This file contains the Vitess Scaling Groups related data structures.

syntax = "proto3";
option go_package = "vitess.io/vitess/go/vt/proto/clustermanagerdata";

option java_package="io.vitess.proto";

import "topodata.proto";

package clustermanagerdata;


message SetShardConfigRequest {
  string cell = 1;
  string keyspace = 2;
  string shard = 3;
  topodata.TabletType tablet_type = 4;
  // number of nodes desired for (keyspace/shard/cell/tablet_type)
  int32 nodes = 5;
}

message DeleteShardConfigRequest{
  string cell = 1;
  string keyspace = 2;
  string shard = 3;
  string tablet_type = 4;
}

message DeleteShardConfigResponse{}

message TabletTypeConfig {
  int32 nodes = 1;
}

message ShardConfig {
  map <string, TabletTypeConfig> tablet_types = 1;
}
message KeyspaceConfig {
  map <string, ShardConfig> shards = 1;
}
message CellConfig {
  map<string, KeyspaceConfig> keyspaces = 1;
}

// ShardConfig defines a desired state for a given cell/keyspace/shard/tablet_type in a Vitess Cluster.
message ClusterConfig{
  map<string, CellConfig> cells = 1;
}

message GetClusterConfigRequest{
  string cell = 1;
  string keyspace = 2;
  string shard = 3;
  string tablet_type = 4;
}