/*
Copyright 2018 The Vitess Authors
 Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at
     http://www.apache.org/licenses/LICENSE-2.0
 Unless required by applicable law or agreedto in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
*/

// This file contains the Vitess Scaling Groups related data structures.

syntax = "proto3";
option go_package = "vitess.io/vitess/go/vt/proto/clustermanagerservice";

option java_package="io.vitess.proto";

import "clustermanagerdata.proto";

package clustermanagerservice;

// ClusterManagerService service definition
service VtClusterManager {
  rpc SetShardConfig(clustermanagerdata.SetShardConfigRequest) returns (clustermanagerdata.ClusterConfig) {};
  rpc GetClusterConfig(clustermanagerdata.GetClusterConfigRequest) returns (clustermanagerdata.ClusterConfig) {};
  rpc DeleteShardConfig(clustermanagerdata.DeleteShardConfigRequest) returns (clustermanagerdata.DeleteShardConfigResponse) {};
}